fix horizontal scroll

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -68,9 +68,9 @@
     position:absolute;
     top:-15%;
     left:30%;
-    right:-30%;
+    right:0%;
     bottom:60%;
-    background:url(../img/cotton-orange.svg) center center no-repeat;
+    background:url(../img/cotton-orange.svg) center right no-repeat;
     background-size:contain;
     opacity:0.1;
     z-index:-200;
